cluster2/guestbook-routes.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: guestbook-cluster2
  name: guestbook-ui
  namespace: default
spec:
  host: guestbook-ui-default.apps.cluster2.ncolon.xyz
  port:
    targetPort: 80
  to:
    kind: Service
    name: guestbook-ui
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: guestbook-cluster2
  name: guestbook-ui-refarch
  namespace: default
spec:
  host: guestbook-ui-default.apps.refarch.ncolon.xyz
  port:
    targetPort: 80
  to:
    kind: Service
    name: guestbook-ui
    weight: 100
  wildcardPolicy: None
