cluster2/hello-route-glb.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-glb
spec:
  host: hello.apps.refarch.ncolon.xyz
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: hello-kubernetes
    weight: 100
  wildcardPolicy: None
