cluster2/hello-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-kubernetes
  namespace: default
spec:
  host: hello.apps.cluster2.ncolon.xyz
  port:
    targetPort: 8080
  to:
    kind: Service
    name: hello-kubernetes
    weight: 100
  wildcardPolicy: None
